# DecisionGPT

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/decision/: confidence.py  engine.py
backend/app/ingestion/: chunker.py  metadata_extractor.py  pipeline.py
backend/app/tools/: dataset_query.py
backend/docker/: docker-compose.yml
backend/scripts/: ingest.sh  run.sh  setup.sh  test.sh
backend/tests/: test_core.py
