[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decisiongpt"
version = "0.1.0"
description = "Evidence-based decision engine using RAG + CAG + KAG"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # LLM + Embeddings
    "openai>=1.35.0",
    "tiktoken>=0.7.0",

    # Document loading
    "pymupdf>=1.24.0",
    "pandas>=2.2.0",

    # Vector store
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",

    # Cache
    "redis>=5.0.4",

    # Graph
    "neo4j>=5.21.0",

    # Retrieval
    "rank-bm25>=0.2.2",

    # Logging
    "loguru>=0.7.2",

    # Utils
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
